# x11-game-basic

./: .gitignore  LICENSE  README.md
dev/: .main.cpp.swp  CMakeLists.txt  main.cpp
dev/include/x11game/: .Game.hpp.swp  .GameDisplay.hpp.swp  Game.hpp  GameDisplay.hpp
dev/src/: .Game.cpp.swp  .GameDisplay.cpp.swp  Game.cpp  GameDisplay.cpp
